<resources>
    <string name="app_name">DebugTools Library</string>
    <string name="title_activity_debug_tools">DebugTools</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_log">Enable Log</string>
    <string name="pref_description_log">Record Logcat</string>

    <string name="pref_title_log_tag">Log Tag</string>

    <string name="pref_title_log_level">Log Level</string>
    <string-array name="pref_log_level_list_titles">
        <item>Verbose</item>
        <item>Info</item>
        <item>Debug</item>
        <item>Warn</item>
        <item>Error</item>
    </string-array>
    <string-array name="pref_log_level_list_values">
        <item>V</item>
        <item>I</item>
        <item>D</item>
        <item>W</item>
        <item>E</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_log">Log</string>
    <string name="pref_header_sp">SharedPreference</string>
    <string name="pref_header_database">Database</string>
    <string name="pref_title_log_filter">Log Filter</string>
    <string name="pref_title_all_log">All Log</string>
    <string name="pref_title_crash_log">Crash Log</string>
    <string name="pref_title_anr_log">ANR Log</string>
    <string name="pref_header_anr">ANR</string>
    <string name="pref_header_file">File Browser</string>
</resources>
