<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/pref_title_all_log"
        android:key="log_all" />

    <Preference
        android:title="@string/pref_title_crash_log"
        android:key="log_crash" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="log_filter"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_log_filter" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="log_tag_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_log_tag" />

    <ListPreference
        android:defaultValue="d"
        android:entries="@array/pref_log_level_list_titles"
        android:entryValues="@array/pref_log_level_list_values"
        android:key="log_level_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_log_level" />

</PreferenceScreen>
